# ChangeLog for media-libs/libexif
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libexif/ChangeLog,v 1.94 2007/12/19 16:23:53 armin76 Exp $

  19 Dec 2007; Raúl Porcel <armin76@gentoo.org> libexif-0.6.16-r1.ebuild:
  alpha/ia64/x86 stable wrt security #202350

  19 Dec 2007; Peter Weller <welp@gentoo.org> libexif-0.6.16-r1.ebuild:
  Stable on amd64; bug 202350

  18 Dec 2007; Brent Baude <ranger@gentoo.org> libexif-0.6.16-r1.ebuild:
  marking libexif-0.6.16-r1 ppc and ppc64 stable for sec bug 202350

  18 Dec 2007; Jeroen Roovers <jer@gentoo.org> libexif-0.6.16-r1.ebuild:
  Stable for HPPA (bug #202350).

  18 Dec 2007; Ferris McCormick <fmccor@gentoo.org>
  libexif-0.6.16-r1.ebuild:
  Sparc stable --- security Bug #202350 --- all tests pass.

*libexif-0.6.16-r1 (18 Dec 2007)

  18 Dec 2007; Jeremy Huddleston <eradicator@gentoo.org>
  +files/libexif-CVE-2007-6351.patch, +files/libexif-CVE-2007-6352.patch,
  +libexif-0.6.16-r1.ebuild:
  Revision bump to address CVE-2007-635{1,2}.  See security bug #202350.

  18 Dec 2007; Jeremy Huddleston <eradicator@gentoo.org>
  libexif-0.6.16.ebuild:
  Cleaned up postinst.  Closes bug #182970.

  31 Jul 2007; Jeremy Huddleston <eradicator@gentoo.org>
  -files/libexif-0.6.12-86740.patch, -files/libexif-0.6.12-gcc4.patch,
  -files/libexif-0.6.12-recurse.patch,
  -files/libexif-0.6.13-doxy-stamp-make.patch,
  -files/libexif-0.6.13-doxygen.patch,
  -files/libexif-0.6.13-library-versioning.patch,
  -files/libexif-0.6.13-optional-apidocs.patch,
  -files/libexif-0.6.13-parallel-build.patch, -libexif-0.6.12-r4.ebuild,
  -libexif-0.6.13-r1.ebuild, -libexif-0.6.15.ebuild,
  -libexif-0.6.15-r1.ebuild:
  Removing older, insecure versions.

  31 Jul 2007; Joshua Kinard <kumba@gentoo.org> libexif-0.6.16.ebuild:
  Stable on mips, per #181922.

  15 Jun 2007; Christoph Mende <angelos@gentoo.org> libexif-0.6.16.ebuild:
  Stable on amd64 wrt security bug 181922
