@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/libexif
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libexif/ChangeLog,v 1.94 2007/12/19 16:23:53 armin76 Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libexif/ChangeLog,v 1.95 2008/06/14 18:18:51 zmedico Exp $
+
+  14 Jun 2008; Zac Medico <zmedico@gentoo.org> libexif-0.6.16.ebuild,
+  libexif-0.6.16-r1.ebuild:
+  Bug #226505 - For compatibility with phase execution order in
+  >=portage-2.1.5, call has_version inside pkg_preinst instead of
+  pkg_postinst.
 
   19 Dec 2007; Raúl Porcel <armin76@gentoo.org> libexif-0.6.16-r1.ebuild:
   alpha/ia64/x86 stable wrt security #202350
